# rustygate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.cursor/rules/: api-design.mdc  documentation.mdc  error-handling.mdc  observability-and-security.mdc  project-overview.mdc  provider-abstraction.mdc  rust-style.mdc  testing.mdc
.github/workflows/: ci.yml
benchmarks/: docker-compose.yml  litellm_config.yaml  record-rss.sh  request.json  run.sh
benchmarks/configs/: mock-prefix-affinity.toml  mock-priority.toml
benchmarks/workloads/: mixed-prompt-lengths.jsonl  no-shared-prefix-streaming.jsonl  no-shared-prefix.jsonl  shared-prefix-streaming.jsonl  shared-prefix.jsonl
config/: gateway.example.toml  gateway.live.example.toml  gateway.local.toml  gateway.prod.toml  gateway.staging.toml
docs/: architecture.md  benchmarks.md  caching.md  failure-handling.md  inference-aware-routing.md  observability.md  openai-compatibility.md  operations.md  provider-routing.md  roadmap.md
docs/observability/otel-demo/: README.md  docker-compose.yml  run-demo.sh  sample-trace.example.json
docs/releases/: v0.1.0.md  v0.2.0.md  v0.4.0.md
examples/: chat-request.json  invalid-chat-request.json  mock-config.toml  responses-request.json
migrations/: 0001_request_logs.sql  0002_api_keys.sql  0003_response_cache.sql
scripts/: openai_sdk_smoke.py  smoke.sh
src/: app.rs  compat.rs  config.rs  error.rs  lib.rs  main.rs  rate_limit.rs  server.rs
src/app/: build.rs  middleware.rs  router.rs  state.rs
src/auth/: keys.rs
src/cache/: mod.rs  response.rs  semantic.rs
src/models/: chat.rs  mod.rs  model.rs  responses.rs  stats.rs
src/providers/: anthropic.rs  anthropic_tool_translation.rs  mock.rs  mod.rs  openai_compatible.rs  provider.rs  sse.rs
src/routes/: chat.rs  compat.rs  health.rs  mod.rs  models.rs  shared.rs  stats.rs
src/routing/: admission.rs  fallback.rs  health.rs  mod.rs  model_pools.rs  prefix_affinity.rs  prefix_fingerprint.rs  resilience.rs  runtime_signals.rs  strategy.rs
src/storage/: memory.rs  sqlite.rs
src/telemetry/: metrics.rs  mod.rs  prometheus.rs  request_log.rs  token_estimator.rs  tracing.rs
tests/: auth_tests.rs  benchmark_workload_tests.rs  cache_tests.rs  chat_tests.rs  config_tests.rs  health_tests.rs  models_tests.rs  openai_compat_tests.rs  persistence_tests.rs  provider_http_tests.rs  redis_rate_limit_tests.rs  routing_tests.rs  runtime_signal_tests.rs  security_limits_tests.rs  semantic_cache_tests.rs  stats_tests.rs  tool_calling_tests.rs
tests/common/: mod.rs
