[package]
name = "rustygate"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A lightweight Rust LLM inference gateway portfolio project."

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-stream = "0.3"
argon2 = "0.5.3"
subtle = "2.6.1"
clap = { version = "4.6.1", features = ["derive"] }
lru = "0.18.0"
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"], optional = true }
sha2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
moka = { version = "0.12.15", features = ["future"] }
hnsw_rs = { version = "0.3.4", optional = true }

[dev-dependencies]
testcontainers = "0.27.3"
tower = { version = "0.5", features = ["util"] }
tracing-test = "0.2.6"
wiremock = "0.6"

[features]
redis-backend = ["dep:redis"]
semantic-cache = ["dep:hnsw_rs"]
runtime-cache-signals = []
